[package]
name = "elsdc"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.155"
opencv = { version = "0.92.0", features = ["clang-runtime"] }

[build-dependencies]
cc = "1.1.5"
bindgen = "0.69.4"
pkg-config = "0.3.19"

[package.metadata]
build = "build.rs"

[build]
rustc-wrapper = "sccache"
