[package]
name = "elsdc"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.155"
log = "0.4.22"
env_logger = "0.11.4"
clap = { version = "4.5.10", features = ["derive"] }
opencv = { version = "0.92.1", features = ["clang-runtime"] }

[build-dependencies]
cc = "1.1.6"
bindgen = "0.69.4"
pkg-config = "0.3.30"

[package.metadata]
build = "build.rs"

[lints.clippy]
tabs_in_doc_comments = "allow"
