[package]
name = "elsdc"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.155"
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.13", features = ["derive"] }
opencv = { version = "0.92.1", features = ["clang-runtime"] }
rand ={ version = "0.8.5", features = ["std"] }

[build-dependencies]
cc = "1.1.8"
bindgen = "0.69.4"
pkg-config = "0.3.30"

[package.metadata]
build = "build.rs"

[lints.clippy]
tabs_in_doc_comments = "allow"
